--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ jobs:
       runs-on: ${{ matrix.os }}
       defaults:
         run:
-          shell: bash -el {0}
+          shell: ${{ matrix.os == 'windows-latest' && 'cmd /C call {0}' || 'bash -el {0}' }}
       steps:
       - name: Clone repo
         uses: actions/checkout@v4
