--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,6 +15,8 @@ jobs:
       steps:
       - name: Clone repo
         uses: actions/checkout@v4
+        with:
+          submodules: recursive
       - name: Set up conda
         uses: conda-incubator/setup-miniconda@v3
         with:
@@ -22,11 +24,19 @@ jobs:
           python-version: ${{ matrix.python-version }}
           environment-file: environment.yml
           activate-environment: fabmws2025
+      - name: Show tool versions
+        run: |
+          gfortran --version
+          cmake --version
+          git --version
+      - name: Build and install pyfabm
+        run: pip install -v code/fabm
+      - name: Build and install gotm
+        run: |
+          cmake -B build/gotm -S source/gotm -DFABM_BASE=code/fabm -DCMAKE_BUILD_TYPE=Release -G Ninja
+          cmake --build build/gotm --target install
       - name: Show versions
         run: |
           gotm --version
           python show_versions.py
-          gfortran --version
-          cmake --version
-          git --version
 
