--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,9 +31,11 @@ jobs:
           git --version
       - name: Build and install pyfabm
         run: pip install -v code/fabm
+        env:
+          CMAKE_GENERATOR: Ninja
       - name: Build and install gotm
         run: |
-          cmake -B build/gotm -S source/gotm -DFABM_BASE=code/fabm -DCMAKE_BUILD_TYPE=Release -G Ninja
+          cmake -B build/gotm -S code/gotm -DFABM_BASE=code/fabm -DCMAKE_BUILD_TYPE=Release -G Ninja
           cmake --build build/gotm --target install
       - name: Show versions
         run: |
