--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Install AMEMR 2024 conda packages and test
+name: Install FABM workshop packages and test
 on: push
 jobs:
    main:
@@ -35,7 +35,7 @@ jobs:
           CMAKE_GENERATOR: Ninja
       - name: Build and install gotm
         run: |
-          cmake -B build/gotm -S code/gotm -DFABM_BASE=code/fabm -DCMAKE_BUILD_TYPE=Release -G Ninja
+          cmake -B build/gotm -S code/gotm -DFABM_BASE=code/fabm -DCMAKE_BUILD_TYPE=Release -G Ninja -DGOTM_USE_STIM=OFF
           cmake --build build/gotm --target install
       - name: Show versions
         run: |
