--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,6 +37,18 @@ jobs:
         run: |
           cmake -B build/gotm -S code/gotm -DFABM_BASE=code/fabm -DCMAKE_BUILD_TYPE=Release -G Ninja
           cmake --build build/gotm --target install
+      - name: Build and install pygetm (Windows)
+        run: |
+          cd code/pygetm
+          install.bat
+        if: matrix.os == 'windows-latest'
+      - name: Build and install pygetm (Linux, Mac)
+        run: |
+          cd code/pygetm
+          source ./install
+        if: matrix.os != 'windows-latest'
+      - name: Build and install fabmos
+        run: pip install -v code/fabmos
       - name: Show versions
         run: |
           gotm --version
