--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -49,6 +49,8 @@ jobs:
         if: matrix.os != 'windows-latest'
       - name: Build and install fabmos
         run: pip install -v code/fabmos
+        env:
+          CMAKE_GENERATOR: Ninja
       - name: Show versions
         run: |
           gotm --version
