--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,10 +33,16 @@ jobs:
         run: pip install -v code/fabm
         env:
           CMAKE_GENERATOR: Ninja
-      - name: Build and install gotm
+      - name: Build and install gotm (Windows)
+        run: |
+          cmake -B build/gotm -S code/gotm -DFABM_BASE=code/fabm -DCMAKE_BUILD_TYPE=Release -G Ninja -DCMAKE_INSTALL_PREFIX=%CONDA_PREFIX%
+          cmake --build build/gotm --target install
+        if: matrix.os == 'windows-latest'
+      - name: Build and install gotm (Linux, Mac)
         run: |
           cmake -B build/gotm -S code/gotm -DFABM_BASE=code/fabm -DCMAKE_BUILD_TYPE=Release -G Ninja -DCMAKE_INSTALL_PREFIX=${CONDA_PREFIX}
           cmake --build build/gotm --target install
+        if: matrix.os != 'windows-latest'
       - name: Build and install pygetm (Windows)
         run: |
           cd code/pygetm
