--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,6 +17,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: recursive
+          fetch-depth: 0
       - name: Set up conda
         uses: conda-incubator/setup-miniconda@v3
         with:
@@ -24,6 +25,8 @@ jobs:
           python-version: ${{ matrix.python-version }}
           environment-file: environment.yml
           activate-environment: fabmws2025
+      - name: Show conda package versions
+        run: conda list
       - name: Show tool versions
         run: |
           gfortran --version
