avoid gfortran 15.1 (breaks do concurrent in fabm)

--- a/environment.yml
+++ b/environment.yml
@@ -6,7 +6,7 @@ dependencies:
   - python-build
   - pip
   # compilation
-  - gfortran
+  - gfortran != 15.1.*
   - netcdf-fortran
   - cmake
   - git
